--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
     height: 100vh;
     width: 100%;
     background-image: url(images/Background_img.png);
-    background-position: center;
+    /* background-position: center; */
     background-size: cover;
     padding-left: 5%;
     padding-right: 5%;
