--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -378,6 +378,7 @@ img{
   margin-bottom: var(--mb-4);
 }
 .footer__social{
+  margin-top: var(--mb-4);
   margin-bottom: var(--mb-4);
 }
 .footer__icon{
