contact form updated

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,7 @@
 
 /*===== Colores =====*/
 :root{
-  /* --first-color: #4070F4; */
+  /* --first-color: #4979fc; */
   --first-color: #ed8c47;
   /* --second-color: #0E2431; */
   --second-color: aliceblue;
@@ -127,7 +127,7 @@ img{
 .dot {
   height: 25px;
   width: 25px;
-  background-color: #ed8c47;
+  background-color: var(--first-color);
   border-radius: 50%;
   display: inline-block;
 }
@@ -135,7 +135,7 @@ img{
 .dot2 {
   height: 15px;
   width: 15px;
-  background-color: #ed8c47;
+  background-color: var(--first-color);
   border-radius: 50%;
   display: inline-block;
 }
@@ -357,7 +357,8 @@ img{
   margin-bottom: var(--mb-4);
 }
 .contact__button{
-  display: block;
+  display: inline;
+  /* display: block; */
   border: none;
   outline: none;
   font-size: var(--normal-font-size);
