--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,8 @@
 /*===== Colores =====*/
 :root{
   /* --first-color: #4979fc; */
-  --first-color: #ed8c47;
+  /* --first-color: #ed8c47; */
+  --first-color: #54e3ff;
   /* --second-color: #0E2431; */
   --second-color: aliceblue;
 }
